fix kudos broken in prev commit

--- a/public/style.less
+++ b/public/style.less
@@ -377,7 +377,7 @@ article .info a:hover {
     cursor: pointer;
 }
 
-article .info a div:nth-child(2) {
+article .info a div:nth-child(2), article .info a .info-caption {
     font-family: KBBrandonGrotesque;
     text-transform: uppercase;
     font-size: 0.6rem;
